--- a/emsiCasablanca.0.3/src/main/resources/application.properties
+++ b/emsiCasablanca.0.3/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-server.port=8090
-spring.datasource.url=jdbc:postgresql://localhost:5432/emsi.0.3
+server.port=8093
+spring.datasource.url=jdbc:postgresql://localhost:5432/EmsiCasablanca
 spring.datasource.username=postgres
 spring.datasource.password=ANFKV6FXUF@
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
